--- a/boitemail.html
+++ b/boitemail.html
@@ -16,6 +16,56 @@
     <div class="classification">Accès interne validé – Niveau 4</div>
 </div>
 
+
+    <div class="mail-card urgent">
+
+    <div class="mail-header">
+        <span class="mail-from">Direction Générale</span>
+        <span class="mail-date">20/02/2130</span>
+    </div>
+
+    <div class="mail-subject">
+        INCIDENT MAJEUR – Intrusion externe confirmée
+    </div>
+
+    <div class="mail-body">
+        <p>
+            Le 20/02/2130, plusieurs individus mineurs identifiés comme
+            <strong>Soma</strong> et affiliés ont pénétré l’enceinte
+            de l’orphelinat Hikari no Mori.
+        </p>
+
+        <p>
+            Le sujet <strong>Toma</strong> a été extrait de l’établissement.
+            L’opération semble avoir été planifiée en amont.
+        </p>
+
+        <p>
+            La situation devient critique. Une liste complète des
+            personnes concernées a été établie.
+        </p>
+
+        <p>
+            L’ensemble des informations complémentaires,
+            identités, profils altériques et niveaux de menace
+            sont désormais archivés sur le portail sécurisé des
+            <strong>Fossoyeurs</strong>.
+        </p>
+
+        <p>
+            Accès externe :
+            <a href="fossoyeurs.html" class="external-link">
+                Portail des Fossoyeurs
+            </a>
+        </p>
+
+        <p class="warning-text">
+            Toute consultation non autorisée sera consignée.
+        </p>
+    </div>
+
+</div>
+    
 <div class="internal-container">
 
     <div class="internal-card">
