--- a/archives.html
+++ b/archives.html
@@ -32,7 +32,10 @@
     <!-- 2️⃣ MESSAGERIE INTERNE -->
     <div class="dossier-card" onclick="window.location.href='boitemail.html'">
         <div class="badge">Interne</div>
-        <div class="dossier-title">Messagerie interne</div>
+        <div class="dossier-title">
+    Messagerie interne
+    <span class="notif-badge">Nouveau</span>
+</div>
         <div class="dossier-desc">
             Communications administratives et rapports confidentiels.
         </div>
