--- a/boitemail.html
+++ b/boitemail.html
@@ -54,7 +54,7 @@
 
         <p>
             Accès externe :
-            <a href="fossoyeurs.html" class="external-link">
+            <a href="https://kakeru33467-star.github.io/fossoyeurs-network/" class="external-link">
                 Portail des Fossoyeurs
             </a>
         </p>
