--- a/boitemail.html
+++ b/boitemail.html
@@ -54,9 +54,12 @@
 
         <p>
             Accès externe :
-            <a href="https://kakeru33467-star.github.io/fossoyeurs-network/" class="external-link">
-                Portail des Fossoyeurs
-            </a>
+            <a href="https://kakeru33467-star.github.io/fossoyeurs-network/"
+   target="_blank"
+   rel="noopener noreferrer"
+   class="external-link">
+   Portail des Fossoyeurs
+</a>
         </p>
 
         <p class="warning-text">
